[tool.poetry]
name = "sport"
version = "0.1.0"
description = ""
authors = ["sergey936 <s.suslakov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
fastapi = "^0.112.1"
flake8 = "^7.1.1"
flake8-bugbear = "^24.8.19"
flake8-builtins = "^2.5.0"
pep8-naming = "^0.14.1"
flake8-commas = "^4.0.0"
flake8-import-order = "^0.18.2"
ruff = "^0.6.1"
pre-commit = "^3.8.0"
uvicorn = "^0.30.6"
punq = "^0.7.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
alembic = "^1.13.2"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
pyjwt = "^2.9.0"
python-multipart = "^0.0.9"
aiobotocore = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
